Fixed grid gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -312,18 +312,16 @@ text-align:left;
   color:#18352B;
   text-align: left;
   margin-top:5px;
-  margin-bottom:0px;
   max-width: 280px;
   margin: auto;
 }
 
 .product-price {
-  font-family: "Sukhumvit Set";
+  font-family: "Sukhumvit Set", Helvetica, "sans serif";
   font-size: 24px;
   font-weight: bold;
   color:#18352B;
   text-align: left;
-  margin-top: 5px;
   max-width:280px;
   margin: auto;
 }
